--- a/config.json
+++ b/config.json
@@ -1,51 +1,16 @@
 {
-    "2.taon.top" :{
-        "owner" : "taontech",
-        "repo" : "githublog",
-        "clientId" : "3c363d50efbac96d4ccf",
-        "clientSecret" : "234f9f7a7e6a65af635366a535bf295bb783ffd9",
-        "theme":"default"
-    },
-    "taon.top" :{
-        "owner" : "taontech",
-        "repo" : "githublog",
-        "clientId" : "ce05afa47f84a85be6ad",
-        "clientSecret" : "3dba78926e6ae22493a66851270dd2955c754b5f",
-        "theme":"forest"
-    },
-    "6.taon.top" :{
-        "owner" : "taontech",
-        "repo" : "githublog",
-        "clientId" : "ce05afa47f84a85be6ad",
-        "clientSecret" : "3dba78926e6ae22493a66851270dd2955c754b5f",
-        "theme":"forest"
-    },
-    "v6.taon.top" :{
-        "owner" : "taontech",
-        "repo" : "githublog",
-        "clientId" : "ce05afa47f84a85be6ad",
-        "clientSecret" : "3dba78926e6ae22493a66851270dd2955c754b5f",
-        "theme":"forest"
-    },
-    "bless.taontech.workers.dev" :{
-        "owner" : "taontech",
-        "repo" : "githublog",
-        "clientId" : "ce05afa47f84a85be6ad",
-        "clientSecret" : "3dba78926e6ae22493a66851270dd2955c754b5f",
-        "theme":"forest"
-    },
-    "taontech.github.io": {
-        "owner" : "taontech",
-        "repo" : "githublog",
-        "clientId" : "16a063cf308dce2e4ac0",
-        "clientSecret" : "ca53b8ba928064a6ff64ef1fde762196625ef90a",
-        "theme":"forest"
-    },
     "127.0.0.1": {
-        "owner" : "taontech",
-        "repo" : "githublog",
-        "clientId" : "16a063cf308dce2e4ac0",
-        "clientSecret" : "ca53b8ba928064a6ff64ef1fde762196625ef90a",
+        "owner" : "briteming",
+        "repo" : "ghb",
+        "clientId" : "Ov23liyGOYXrvPcTadA3",
+        "clientSecret" : "313d4b8276e9fbf912050d92c7183f2b6f68070b",
+        "theme":"forest"
+    },
+    "ghb-brite.netlify.app": {
+        "owner" : "briteming",
+        "repo" : "ghb",
+        "clientId" : "Ov23liyGOYXrvPcTadA3",
+        "clientSecret" : "313d4b8276e9fbf912050d92c7183f2b6f68070b",
         "theme":"forest"
     }
 }
