--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "127.0.0.1": {
+    "briteming.github.io/ghb": {
         "owner" : "briteming",
         "repo" : "ghb",
         "clientId" : "Ov23liyGOYXrvPcTadA3",
